--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ Verification/doc/
 Verification/run/work/
 Verification/run/transcript
 Verification/run/trace_core_xx_x.log
+Verification/run/vsim.wlf
