--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 
 Verification/doc/
 Verification/run/work/
-Verification/run/trans/
+Verification/run/trans/*.txt
 Verification/run/transcript
 Verification/run/trace_core_xx_x.log
 Verification/run/vsim.wlf
