--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 Verification/doc/
 Verification/run/work/
 Verification/run/trans/*.txt
+Verification/run/weird results/*
 Verification/run/transcript
 Verification/run/trace_core_xx_x.log
 Verification/run/vsim.wlf
